manifests/0000_70_dns-operator_01-network-policy-deny-all.yaml
# We control the namespace, deny anything we do not explicitly allow
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns-operator-deny-all
  namespace: openshift-dns-operator
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
